# ai-field-notes

./: .gitignore  README.md  SYNC-CONTRACT.md  SYNC-HANDOFF.md  astro.config.mjs  package-lock.json  package.json
articles/auto-research-loop-on-spark/evidence/repo-snapshot/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
articles/auto-research-loop-on-spark/evidence/repo-snapshot/agent_core/: __init__.py  calibrate_baseline.py  task_adapter.py
articles/auto-research-loop-on-spark/evidence/repo-snapshot/agent_core/agents/: __init__.py  base.py  hooks.py  runner.py
articles/auto-research-loop-on-spark/evidence/repo-snapshot/agent_core/harness/: __init__.py  baseline_audit.py  blackboard.py  config.py  credentials.py  local_scheduler.py  scheduler.py  tracker.py
articles/auto-research-loop-on-spark/evidence/repo-snapshot/agent_core/scripts/: __init__.py  check_api.py
articles/auto-research-loop-on-spark/evidence/repo-snapshot/agent_core/supervisor/: __init__.py  __main__.py  core.py  (+1 more)
articles/auto-research-loop-on-spark/evidence/repo-snapshot/docs/: architecture.md  task_adapter.md
articles/auto-research-loop-on-spark/evidence/repo-snapshot/multi_agent_cifar/: README.md  __init__.py  airbench94_muon.py  airbench96.py  calibrate_baseline.py  dashboard.py  run_trial.sh  swarm_config.json  task_config.py
articles/auto-research-loop-on-spark/evidence/repo-snapshot/multi_agent_generic_pg/: README.md  __init__.py  dashboard.py  knowledge  run_trial.sh  swarm_config.json  task_config.py
articles/auto-research-loop-on-spark/evidence/repo-snapshot/multi_agent_nc/: README.md  __init__.py  calibrate_baseline.py  dashboard.py  run_trial.sh  swarm_config.json  task_config.py
articles/auto-research-loop-on-spark/evidence/repo-snapshot/multi_agent_pg/: README.md  __init__.py  calibrate_baseline.py  dashboard.py  run_trial.sh  swarm_config.json  task_config.py  train_gpt.py
articles/auto-research-loop-on-spark/evidence/repo-snapshot/release_artifacts/: README.md  example_lineage_pg_lineage_on_arch.txt  example_lineage_pg_main_quant.txt
articles/auto-research-loop-on-spark/evidence/repo-snapshot/single_agent_pg/: README.md  __init__.py  dashboard.py  swarm_config.json  task_config.py  train_gpt.py
articles/judge-orchestrated-ensemble-on-spark/evidence/repo-snapshot/: .gitignore  .pre-commit-config.yaml  LICENSE  MTRAG paper summary.md  README.md  pyproject.toml
articles/judge-orchestrated-ensemble-on-spark/evidence/repo-snapshot/notebooks/: Summary.ipynb  Unanswerable.ipynb
articles/judge-orchestrated-ensemble-on-spark/evidence/repo-snapshot/scripts/: run_dash_analysis.py  run_dash_conversations.py  run_dash_generation_tasks.py  view_data_and_save_dialogs.py
articles/judge-orchestrated-ensemble-on-spark/evidence/repo-snapshot/splits/: taskB.json  test.json  test_1.json  test_2.json  test_3.json  test_96.json  train.json  val.json
articles/judge-orchestrated-ensemble-on-spark/evidence/repo-snapshot/src/: __init__.py
(+937 files in other folders)
